2000-10-21  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime.h.in: Wrap definitions in #ifndef __GMIME_H__

2000-10-18  Jeffrey Stedfast  <fejj@helixcode.com>

	* TODO: Updated.

	* test-*.c: Updated to reflect GMime API changes.

	* gmime-part.c: #include "gmime-utils.h"

	* gmime-parser.c (g_mime_parser_construct_message): Now takes a
	boolean argument 'save_extra_headers' which tells the parser
	whether it should add unknown headers to the arbitrary header
	array or ignore them.
	(construct_headers): Save the extra headers if desired.

	* gmime-message.c (g_mime_message_add_arbitrary_header): Use the
	new GMimeHeader structure.
	(g_mime_message_new): Always initialize the arbitrary header array.
	(g_mime_message_destroy): The arbitrary header array will never
	be NULL (as it is now pre-initialized) so don't bother
	checking.
	(create_header): rfc2047 encode the arbitrary header values.

2000-10-17  Jeffrey Stedfast  <fejj@helixcode.com>

	* rfc/rfc*.txt: MIME specification RFCs

	* README: Updated.

	* TODO: Added a list of tasks that need to be done eventually.

	* gmime-parser.c (get_mime_part): rfc2047 decode the
	content-description before we set the value.

	* gmime-part.c (g_mime_part_to_string): rfc2047 encode the
	content-description before we write it to the string.

2000-10-06  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-parser.c (construct_headers): rfc2047 decode some headers.

	* internet-address.c (internet_address_to_string): Now takes an
	argument to rfc2047 encode or not, when not rfc2047 encoding.
	(internet_address_new_from_string): Rewrote

	* gmime-message.c (create_header): rfc2047 encode addresses and
	subject headers.

2000-10-05  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-utils.c (g_mime_utils_quoted_encode_step): Fixed some
	non-compliance issues like encoding all spaces as =20 even when
	they shouldn't have been.

2000-10-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* acconfig.h:
	* config.h.in: #undef HAVE_ISBLANK
